# PetscStaticLibrary

benchmarks/Test1/: .Makefile.swp  Makefile  main.cpp  run
libTest/: CMakeLists.txt
libTest/include/: test.h
